--- a/fargate_ecs_stack.yaml
+++ b/fargate_ecs_stack.yaml
@@ -8,36 +8,30 @@ Resources:
     P4Cluster:
         Type: AWS::ECS::Cluster
         Properties:
-            ClusterName: p4
-            CapacityProviders:
+            ClusterName: P4Cluster
+    P4ServerTask:
+        Type: AWS::ECS::TaskDefinition
+        Properties:
+            ContainerDefinitions:
+                - Name: P4Container
+                  Image: !GetAtt P4Repository.RepositoryUri
+                  PortMappings:
+                    - ContainerPort: 80
+                      HostPort: 80
+                      AppProtocol: http
+            Cpu: 512
+            Memory: 1024
+            TaskRoleArn: arn:aws:iam::989870301024:role/aws-service-role/ecs.amazonaws.com/AWSServiceRoleForECS
+            NetworkMode: awsvpc
+            RequiresCompatibilities:
                 - FARGATE
-                - FARGATE_SPOT
-#    P4ServerTask:
-#        Type: AWS::ECS::TaskDefinition
-#        Properties:
-#            ContainerDefinitions:
-#                - ContainerDefinition
-#            Cpu: String
-#            EphemeralStorage:
-#                EphemeralStorage
-#            ExecutionRoleArn: String
-#            Family: String
-#            InferenceAccelerators:
-#                - InferenceAccelerator
-#            IpcMode: String
-#            Memory: String
-#            NetworkMode: String
-#            PidMode: String
-#            PlacementConstraints:
-#                - TaskDefinitionPlacementConstraint
-#            ProxyConfiguration:
-#                ProxyConfiguration
-#            RequiresCompatibilities:
-#                - String
-#            RuntimePlatform:
-#                RuntimePlatform
-#            Tags:
-#                - Tag
-#            TaskRoleArn: String
-#            Volumes:
-#                - Volume
+    P4Service:
+        Type: AWS::ECS::Service
+        Properties:
+            Cluster: !Ref P4Cluster
+            DesiredCount: 1
+            LaunchType: FARGATE
+            NetworkConfiguration:
+                AwsvpcConfiguration:
+                    AssignPublicIp: ENABLED
+            TaskDefinition: !Ref P4ServerTask
