Changes in ec2 stack

--- a/ec2_ecs_stack.yaml
+++ b/ec2_ecs_stack.yaml
@@ -11,13 +11,9 @@ Resources:
             GroupDescription: Enable SSH and HTTP traffic
             SecurityGroupIngress:
                 -   CidrIp: 0.0.0.0/0
-                    IpProtocol: tcp
-                    FromPort: 22
-                    ToPort: 22
-                -   CidrIp: 0.0.0.0/0
-                    IpProtocol: tcp
-                    FromPort: 80
-                    ToPort: 80
+                    IpProtocol: '-1'
+                    FromPort: -1
+                    ToPort: -1
     P4Ec2Cluster:
         Type: AWS::ECS::Cluster
         Properties:
@@ -37,37 +33,6 @@ Resources:
             Tags:
                 -   Key: Name
                     Value: P4Ec2Instance
-    P4Ec2LoadBalancer:
-        Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-        Properties:
-            Name: P4Ec2LoadBalancer
-            IpAddressType: ipv4
-            Scheme: internet-facing
-            Subnets:
-                - subnet-00f75e8296c3061d1
-                - subnet-02330bc7e36c9a3ab
-            SecurityGroups:
-                - !GetAtt P4Ec2SecurityGroup.GroupId
-    P4Ec2TargetGroup:
-        Type: AWS::ElasticLoadBalancingV2::TargetGroup
-        Properties:
-            Name: P4Ec2TargetGroup
-            Port: 80
-            Protocol: HTTP
-            VpcId: vpc-02ecbecc4574f6c99
-            TargetType: instance
-            Targets:
-                -   Id: !Ref P4Ec2Instance
-                    Port: 80
-    P4Ec2Listener:
-        Type: AWS::ElasticLoadBalancingV2::Listener
-        Properties:
-            LoadBalancerArn: !Ref P4Ec2LoadBalancer
-            Port: 80
-            Protocol: HTTP
-            DefaultActions:
-                -   Type: forward
-                    TargetGroupArn: !GetAtt P4Ec2TargetGroup.TargetGroupArn
     P4Ec2Task:
         Type: AWS::ECS::TaskDefinition
         Properties:
@@ -87,19 +52,8 @@ Resources:
                 - EC2
     P4Ec2Service:
         Type: AWS::ECS::Service
-        DependsOn: P4Ec2LoadBalancer
         Properties:
             Cluster: !Ref P4Ec2Cluster
             DesiredCount: 1
             LaunchType: EC2
-            NetworkConfiguration:
-                AwsvpcConfiguration:
-                    Subnets:
-                        - subnet-00f75e8296c3061d1
-                    SecurityGroups:
-                        - !GetAtt P4Ec2SecurityGroup.GroupId
             TaskDefinition: !Ref P4Ec2Task
-            LoadBalancers:
-                - ContainerName: P4Container
-                  ContainerPort: 80
-                  LoadBalancerName: !GetAtt P4Ec2LoadBalancer.LoadBalancerName
